# bir-black-mouth

./: Dockerfile  README.md  build_docker.sh  run_docker.sh  settings.sh
black_mouth_bringup/: CMakeLists.txt  package.xml
black_mouth_bringup/launch/: bringup.launch.py
black_mouth_control/: CMakeLists.txt  black_mouth_control.xml  package.xml
black_mouth_control/config/: body_control.yaml  leg_controllers.yaml  leg_controllers_all.yaml  leg_controllers_real_robot.yaml
black_mouth_control/include/black_mouth_control/: BodyControl.hpp  black_mouth_hardware_interface.hpp
black_mouth_control/launch/: bm_load_controller.launch.py
black_mouth_control/msg/: BodyControl.msg
black_mouth_control/scripts/: test_trot.py  test_trot2.py
black_mouth_control/src/: BodyControl.cpp  black_mouth_hardware_interface.cpp
black_mouth_control/urdf/: real_robot.urdf.xacro  simulation.urdf  simulation.urdf.xacro
black_mouth_data_analysis/: package.xml  setup.cfg  setup.py
black_mouth_data_analysis/black_mouth_data_analysis/: body_control_setpoint.py  feet_default_poses_broadcaster.py  feet_listener.py
black_mouth_data_analysis/launch/: data_analysis.launch.py
black_mouth_description/: CMakeLists.txt  package.xml
black_mouth_description/launch/: start_robot.launch.py
black_mouth_description/meshes/: base_link.dae  base_link.stl  dynamixel.dae  femur.stl  hip.dae  left_femur.dae  left_tibia.dae  right_femur.dae  right_tibia.dae  tibia.dae  tibia.stl
black_mouth_description/rviz/: urdf_config.rviz
black_mouth_description/scripts/: default_feet_poses_transform.py
black_mouth_description/urdf/: black_mouth.urdf.xacro  black_mouth_real.urdf.xacro  quadruped.urdf.xacro  quadruped1.urdf.xacro
black_mouth_gait_planner/: CMakeLists.txt  package.xml
black_mouth_gait_planner/config/: gait_planner.yaml
black_mouth_gait_planner/launch/: gait_planner.launch.py
black_mouth_gait_planner/scripts/: trot_gait.py
black_mouth_gait_planner/src/: compute_gait_trajectory.cpp  compute_ik_gait_trajectory.cpp
black_mouth_gait_planner/srv/: ComputeGaitTrajectory.srv
black_mouth_gazebo/: CMakeLists.txt  package.xml
black_mouth_gazebo/launch/: bm_empty_world.launch.py  display.launch.py
black_mouth_gazebo/worlds/: empty.world
black_mouth_kinematics/: CMakeLists.txt  package.xml
black_mouth_kinematics/config/: generic_joystick.yaml  ps4_joystick.yaml  quadruped.yaml  x360_joystick.yaml
black_mouth_kinematics/include/black_mouth_kinematics/: BodyRotationControl.hpp  EMAFilter.hpp  InverseKinematics.hpp  JoyBodyIK.hpp
black_mouth_kinematics/launch/: display.launch.py  joy_body_ik.launch.py  kinematics.launch.py
black_mouth_kinematics/msg/: AllLegJoints.msg  AllLegPoints.msg  BodyLegIK.msg  BodyLegIKTrajectory.msg  LegJoints.msg
black_mouth_kinematics/rviz/: test_grid.rviz
black_mouth_kinematics/src/: BodyRotationControl.cpp  InverseKinematics.cpp  JoyBodyIK.cpp  compute_inverse_kinematics_server.cpp
black_mouth_kinematics/srv/: InvKinematics.srv
black_mouth_kinematics/test/: compute_inverse_kinematics_client.cpp  publish_ik_trajectory.cpp
black_mouth_teleop/: CMakeLists.txt  package.xml
black_mouth_teleop/config/: generic_joystick.yaml  ps4_joystick.yaml  x360_joystick.yaml
black_mouth_teleop/include/black_mouth_teleop/: JoyBodyIK.hpp  JoyTeleop.hpp
black_mouth_teleop/launch/: joy_body_ik.launch.py  joy_teleop.launch.py
black_mouth_teleop/msg/: States.msg  TeleopState.msg
black_mouth_teleop/src/: JoyBodyIK.cpp  JoyTeleop.cpp  teleop_state_server.cpp
black_mouth_teleop/srv/: GetTeleopState.srv  SetTeleopState.srv
caramel_bringup/: CMakeLists.txt  package.xml
caramel_bringup/launch/: bringup.launch.py  mpu6050.launch.py
caramel_control/: CMakeLists.txt  caramel_control.xml  package.xml
caramel_control/config/: leg_controllers_real_robot.yaml  leg_controllers_velocity.yaml
caramel_control/launch/: caramel_load_controller.launch.py
caramel_control/msg/: BodyControl.msg  PID.msg
caramel_control/src/: BodyControl.cpp  caramel_hardware_interface.cpp
caramel_control/urdf/: real_robot.urdf.xacro  simulation.urdf.xacro
caramel_data_analysis/: package.xml  setup.cfg  setup.py  test_foot_traj.sh  test_stability_velocity.sh  transfer_bag.sh
caramel_data_analysis/caramel_data_analysis/: body_control_setpoint.py  foot_follow_trajectory.py  stability_velocity.py
caramel_data_analysis/csv/: feet_trajectory.csv  stability_angular_velocity_irregular.csv  stability_angular_velocity_irregular_imu.csv  stability_velocity.csv  stability_velocity_iregular_imu.csv  stability_velocity_plane.csv  stability_velocity_plane_imu.csv
caramel_data_analysis/launch/: foot_traj_test.launch.py  stability_velocity_test.launch.py
caramel_description/: CMakeLists.txt  package.xml
caramel_description/meshes/: base_link.stl  hip.dae  left_femur.dae  tibia.dae
caramel_description/scripts/: default_feet_poses_transform.py
caramel_description/urdf/: caramel.urdf.xacro  caramel_real.urdf.xacro
caramel_gait_planner/: CMakeLists.txt  package.xml
caramel_gait_planner/config/: gait_planner.yaml
caramel_gait_planner/launch/: gait_planner.launch.py
caramel_gait_planner/scripts/: trot_gait.py
caramel_gait_planner/src/: compute_gait_trajectory.cpp  compute_ik_gait_trajectory.cpp
caramel_gait_planner/srv/: ComputeGaitTrajectory.srv
caramel_gazebo/: CMakeLists.txt  package.xml
caramel_gazebo/launch/: caramel_empty_world.launch.py
caramel_kinematics/: CMakeLists.txt  package.xml
caramel_kinematics/config/: quadruped.yaml
caramel_kinematics/launch/: display.launch.py  kinematics.launch.py
caramel_kinematics/msg/: AllLegJoints.msg  AllLegPoints.msg  BodyLegIK.msg  (+1 more)
caramel_teleop/: CMakeLists.txt  package.xml
caramel_teleop/config/: generic_joystick.yaml  ps4_joystick.yaml  x360_joystick.yaml
caramel_teleop/include/caramel_teleop/: JoyTeleop.hpp
caramel_teleop/launch/: joy_teleop.launch.py
caramel_teleop/msg/: TeleopState.msg
caramel_teleop/src/: JoyTeleop.cpp  teleop_state_server.cpp
caramel_teleop/srv/: GetTeleopState.srv  SetTeleopState.srv
(+13 files in other folders)
